# MiniLLMLib

./: .gitignore  CHANGELOG.md  LICENSE  README.md  mkdocs.yml  pyproject.toml  setup.py  test.ipynb
.github/workflows/: ci.yml  pypi-publish.yml
docs/: conf.py  configuration.md  contributing.md  extending.md  index.md  prompt-management.md  providers.md  requirements.txt  troubleshooting.md  usage.md
src/minillmlib/: __init__.py
src/minillmlib/core/: __init__.py  chat_node.py
src/minillmlib/models/: __init__.py  generator_info.py  model_zoo.py
src/minillmlib/utils/: __init__.py  json_utils.py  logging_utils.py  message_utils.py
tests/: __init__.py  test_audio_input.py  test_audio_utils.py  test_chat_node.py  test_generator_info.py  test_image_data.py  test_message_merge.py
